[gd_scene load_steps=28 format=3 uid="uid://ceyavwgwtqqjy"]

[ext_resource type="Texture2D" uid="uid://ds03yl7pg541h" path="res://assets/sprites/unit_sprites/enemies.png" id="1_5mdgj"]
[ext_resource type="Script" uid="uid://odedvtyhjkuo" path="res://scripts/other/units/angry.gd" id="1_ksger"]
[ext_resource type="Texture2D" uid="uid://dmx8lqci0v0o6" path="res://assets/sprites/selecting.png" id="2_gkvx5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gkvx5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sf07n"]
atlas = ExtResource("1_5mdgj")
region = Rect2(0, 0, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnfyt"]
atlas = ExtResource("1_5mdgj")
region = Rect2(16, 0, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1b1r"]
atlas = ExtResource("1_5mdgj")
region = Rect2(32, 0, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_15c6q"]
atlas = ExtResource("1_5mdgj")
region = Rect2(48, 0, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ars0"]
atlas = ExtResource("1_5mdgj")
region = Rect2(0, 25, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6635"]
atlas = ExtResource("1_5mdgj")
region = Rect2(16, 25, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmy07"]
atlas = ExtResource("1_5mdgj")
region = Rect2(32, 25, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_kynac"]
atlas = ExtResource("1_5mdgj")
region = Rect2(48, 25, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_erwdb"]
atlas = ExtResource("1_5mdgj")
region = Rect2(0, 75, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_dr75l"]
atlas = ExtResource("1_5mdgj")
region = Rect2(0, 100, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_854e2"]
atlas = ExtResource("1_5mdgj")
region = Rect2(16, 100, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_12bn4"]
atlas = ExtResource("1_5mdgj")
region = Rect2(32, 100, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yl47"]
atlas = ExtResource("1_5mdgj")
region = Rect2(48, 100, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jtae"]
atlas = ExtResource("1_5mdgj")
region = Rect2(0, 125, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwcyc"]
atlas = ExtResource("1_5mdgj")
region = Rect2(16, 125, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tk3u"]
atlas = ExtResource("1_5mdgj")
region = Rect2(32, 125, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_8g2qr"]
atlas = ExtResource("1_5mdgj")
region = Rect2(48, 125, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4cxw"]
atlas = ExtResource("1_5mdgj")
region = Rect2(0, 50, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w88r"]
atlas = ExtResource("1_5mdgj")
region = Rect2(16, 50, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6ilf"]
atlas = ExtResource("1_5mdgj")
region = Rect2(32, 50, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpuva"]
atlas = ExtResource("1_5mdgj")
region = Rect2(48, 50, 16, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_ksger"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf07n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnfyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1b1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15c6q")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ars0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6635")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmy07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kynac")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_erwdb")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dr75l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_854e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12bn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yl47")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jtae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwcyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tk3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8g2qr")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4cxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w88r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6ilf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpuva")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ksger"]
size = Vector2(10, 13)

[node name="angry" type="StaticBody2D"]
script = ExtResource("1_ksger")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_gkvx5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.5, -4)
sprite_frames = SubResource("SpriteFrames_ksger")
animation = &"1"

[node name="Selecting" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(0.5, -16)
texture = ExtResource("2_gkvx5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_ksger")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
